# openao

./: .clang-format  .cmake-lint  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  database.txt  ddl2cpp  docker-compose.build.yaml  docker-compose.local.yaml  docker-compose.yaml
src/: CMakeLists.txt  main.cpp
src/database/: CMakeLists.txt
src/datasources/: iaccount.h  icharacter.h  iinventory.h
src/datasources/impl/pqxx/: account.h  character.h  inventory.h
src/experimental/: client.h  iclient.h  player.h  reactor.h
src/experimental/di/: dependency_injector.h  injectable.h  injector.h
src/experimental/ecs/: componentmanager.h  componentmap.h  entitymanager.h
src/experimental/events/: abstractevent.h  event.h
src/experimental/events/game/: angel_gold.h  client_connected.h  message.h
src/experimental/game/: stage.h
src/experimental/game/account/: accountmanager.h  authenticatecommand.h  controller.h  logoutcommand.h  service.h
src/experimental/game/character/: character.h  manager.h  service.h
src/experimental/game/chat/: chatmessagecommand.h  chatmessageevent.h  controller.h
src/experimental/game/itemmall/: controller.h  loadangelgoldevent.h  opencommand.h  service.h
src/experimental/login/account/: accountcontroller.h  accountservice.h  authenticatecommand.h  characterlistevent.h
src/experimental/login/branches/: branchesservice.h
src/experimental/reactor/: event.h
src/experimental/serialization/: deserializer.h  serializer.h
src/experimental/serializer/: deserializer.h  serializer.h
src/experimental/transport/: client.h  customreactor.h  iclient.h  imessagestream.h  messagestream.h  server.h
src/framework/: CMakeLists.txt  Dockerfile  event.h
src/framework/di/: dependency_injector.h  injectable.h
src/framework/ecs/: componentmanager.h  componentmap.h  entitymanager.h
src/framework/security/: ciphersuite.h  crypt_xor.h  crypt_xor2.h
src/framework/serialization/: deserializer.h  serializer.h
src/framework/transport/: checksum.cpp  checksum.h  client.h  customreactor.h  iclient.h  imessagestream.h  messagestream.h  packetheader.h  server.h
src/framework/utils/: binarybuffer.h  bitset.h  flagset.h  string.h
src/game/: CMakeLists.txt  Dockerfile  entitymanager.h  game.h  main.cpp  player.h  playermanager.cpp  playermanager.h  server.h  system.h
src/game/character/: charactercontroller.h  charactermanager.h  controller.h  irepository.h  manager.h  repository.h
src/game/character/commands/: authenticate.h  authenticatecommand.h  interact.h  logout.h  settitle.h
src/game/character/events/: characterdetail.h  characterdetailevent.h  loadfunctionbar.h  loadfunctionbarevent.h  showemote.h  titlechanged.h
src/game/character/model/: character.h  detail.h
src/game/character/repositories/: icharacterrepository.h
src/game/chat/: controller.h
src/game/chat/commands/: say.h
src/game/chat/events/: says.h
src/game/controller/: account.h  actions.h  chat.h  items.h  movement.h
src/game/entity/: irepository.h  manager.h  repository.h
src/game/entity/events/: destroy.h  update.h
src/game/entity/model/: character.h  npc.h
src/game/inventory/: controller.h  inventorycontroller.h  irepository.h  manager.h  repository.h
src/game/inventory/commands/: loadinventory.h  loadinventorycommand.h  moveitem.h
src/game/inventory/events/: loadinventory.h  loadinventoryevent.h  updateinventory.h
src/game/inventory/model/: inventory.h  item.h
src/game/inventory/repositories/: iinventoryrepository.h
src/game/messages/requests/: auth.h  global_message.h  interact.h  loadinventory.h  logout_1.h  logout_2.h  move.h  moveitem.h  postauth.h
src/game/messages/responses/: achievements.h  after_spawnplayer.h  character.h  emotes.h  emotes_bar.h  move.h  (+19 more)
src/game/movement/: controller.h
src/game/services/: account.h
src/game/stage/: manager.h
src/game/subsystems/: entitymanager.h  inventory.h
src/login/: CMakeLists.txt  Dockerfile  authrequest.h  authresponse.h  handlers.h  login.h  main.cpp  server.h  system.h  type.h
src/login/account/: accountcontroller.h  accountservice.h  authenticatecommand.h  characterlistevent.h  controller.h  irepository.h  repository.h
src/login/branches/: branchesservice.h
src/login/character/: irepository.h  repository.h
src/login/postgresql/: accountrepository.h  characterrepository.h  postgres.h
src/login/services/: account.h
src/messages/requests/: auth.h
src/messages/responses/: charinfo.h  redirect.h
src/model/: account.h  attributes.h  bagitem.h  branches.h  character.h  characters.h  equipment.h  gameserver.h  generic.h  inventory.h  inventoryitem.h  misc.h  position.h  stats.h
src/repositories/: iaccount.h  icharacter.h  iinventory.h
src/serialization/: attributes.cpp  attributes.h  branches.cpp  branches.h  equipment.cpp  equipment.h  misc.cpp  misc.h
src/serialization/binary/: attributes.h  branches.h  equipment.h
src/services/: account.h
src/transport/: binarybuffer.h  checksum.cpp  checksum.h  ciphersuite.h  client.h  example.md  message.h  messagestream.h  packetheader.h  server.h  string.h  system.h
src/transport/security/: crypt_xor.h  crypt_xor2.h
src/utils/: binarybuffer.h  bitset.h  flagset.h  string.h
test/: CMakeLists.txt
test/experimental/: chat.cpp  client.cpp  clientmock.h  deserializer.cpp  ecs.cpp  itemmall.cpp  messagestreammock.h  mockclient.h  mockmessagestream.h  reactor.cpp  serialization.cpp  server.cpp
test/experimental/account/: characterlistevent.cpp
test/experimental/di/: dependency_injector.cpp  injector.cpp
test/framework/: CMakeLists.txt  test.cpp
test/framework/di/: dependency_injector.cpp
test/framework/utils/: bitset.cpp
test/game/: CMakeLists.txt
test/game/character/: authenticatecommand.cpp  charactercontroller.cpp  characterdetailevent.cpp
test/login/: CMakeLists.txt
test/login/account/: characterlistevent.cpp
test/runners/postgresql/: Makefile  docker-compose.yaml
test/transport/: connection.cc  packetheader.cpp
test/transport/security/: crypt_xor.cc  crypt_xor2.cc
(+108 files in other folders)
